analysis/low-level-api-fir/testData/getOrBuildFir/invalidCode/longStringTemplateEntryWithTwoExpressions.kt
// LOOK_UP_FOR_ELEMENT_OF_TYPE: KtFunctionLiteral
fun test() {
    val a = 1
    val b = "${a $<expr>{}</expr>}"
}